@@ -9,7 +9,9 @@ public interface AddPet extends Wirespec.Endpoint {
 
   static class Queries implements Wirespec.Queries {}
 
-  static class RequestHeaders implements Wirespec.Request.Headers {}
+  public record RequestHeaders(
+    java.util.Optional<String> XCorrelationID
+  ) implements Wirespec.Request.Headers {}
 
   record Request (
     Path path,
@@ -18,8 +20,8 @@ public interface AddPet extends Wirespec.Endpoint {
     RequestHeaders headers,
     Pet body
   ) implements Wirespec.Request<Pet> {
-    public Request(Pet body) {
-      this(new Path(), Wirespec.Method.POST, new Queries(), new RequestHeaders(), body);
+    public Request(java.util.Optional<String> XCorrelationID, Pet body) {
+      this(new Path(), Wirespec.Method.POST, new Queries(), new RequestHeaders(XCorrelationID), body);
     }
   }
 
@@ -34,11 +36,12 @@ public interface AddPet extends Wirespec.Endpoint {
     Headers headers,
     Pet body
   ) implements Response2XX<Pet>, ResponsePet {
-    public Response200(java.util.Optional<Integer> XRateLimit, Pet body) {
-      this(200, new Headers(XRateLimit), body);
+    public Response200(java.util.Optional<Integer> XRateLimit, java.util.Optional<String> XCorrelationID, Pet body) {
+      this(200, new Headers(XRateLimit, XCorrelationID), body);
     }
     public record Headers(
-    java.util.Optional<Integer> XRateLimit
+    java.util.Optional<Integer> XRateLimit,
+    java.util.Optional<String> XCorrelationID
   ) implements Wirespec.Response.Headers {}
   }
   record Response405(
@@ -59,19 +62,20 @@ public interface AddPet extends Wirespec.Endpoint {
         request.method().name(),
         java.util.List.of("pet"),
         java.util.Collections.emptyMap(),
-        java.util.Collections.emptyMap(),
+        java.util.Map.ofEntries(java.util.Map.entry("X-Correlation-ID", serialization.serializeParam(request.headers().XCorrelationID(), Wirespec.getType(String.class, java.util.Optional.class)))),
         serialization.serializeBody(request.body(), Wirespec.getType(Pet.class, null))
       );
     }
 
     static Request fromRequest(Wirespec.Deserializer serialization, Wirespec.RawRequest request) {
       return new Request(
+        serialization.deserializeParam(request.headers().getOrDefault("X-Correlation-ID", java.util.Collections.emptyList()), Wirespec.getType(String.class, java.util.Optional.class)),
         serialization.deserializeBody(request.body(), Wirespec.getType(Pet.class, null))
       );
     }
 
     static Wirespec.RawResponse toResponse(Wirespec.Serializer serialization, Response<?> response) {
-      if (response instanceof Response200 r) { return new Wirespec.RawResponse(r.status(), java.util.Map.ofEntries(java.util.Map.entry("X-Rate-Limit", serialization.serializeParam(r.headers().XRateLimit(), Wirespec.getType(Integer.class, java.util.Optional.class)))), serialization.serializeBody(r.body, Wirespec.getType(Pet.class, null))); }
+      if (response instanceof Response200 r) { return new Wirespec.RawResponse(r.status(), java.util.Map.ofEntries(java.util.Map.entry("X-Rate-Limit", serialization.serializeParam(r.headers().XRateLimit(), Wirespec.getType(Integer.class, java.util.Optional.class))), java.util.Map.entry("X-Correlation-ID", serialization.serializeParam(r.headers().XCorrelationID(), Wirespec.getType(String.class, java.util.Optional.class)))), serialization.serializeBody(r.body, Wirespec.getType(Pet.class, null))); }
       if (response instanceof Response405 r) { return new Wirespec.RawResponse(r.status(), java.util.Collections.emptyMap(), null); }
       else { throw new IllegalStateException("Cannot match response with status: " + response.status());}
     }
@@ -80,6 +84,7 @@ public interface AddPet extends Wirespec.Endpoint {
       switch (response.statusCode()) {
         case 200: return new Response200(
         serialization.deserializeParam(response.headers().getOrDefault("X-Rate-Limit", java.util.Collections.emptyList()), Wirespec.getType(Integer.class, java.util.Optional.class)),
+        serialization.deserializeParam(response.headers().getOrDefault("X-Correlation-ID", java.util.Collections.emptyList()), Wirespec.getType(String.class, java.util.Optional.class)),
         serialization.deserializeBody(response.body(), Wirespec.getType(Pet.class, null))
       );
         case 405: return new Response405();
